# Clipboard2JSON

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  common.rs  lib.rs  main.rs  utils.rs  winapi.rs  winapi_clipboard.rs  x11_clipboard.rs
