[package]
name = "clipboard-rs"
version = "0.1.0"
authors = ["lawrencek0 <l.khadka@outlook.com>"]
edition = "2018"

[dependencies]
regex = "1"
url = "^1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(linux)'.dependencies]
x11 = { version = "^2.18", features = ["xlib"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser", "winbase", "libloaderapi"] }