[package]
name = "clipboard2json"
version = "0.1.0"
authors = ["lawrencek0 <l.khadka@outlook.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "^2.18", features = ["xlib"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser", "winbase", "winerror", "libloaderapi"] }
regex = "1"
lazy_static = "1.3.0"
scopeguard = "1"

[dev-dependencies]
clipboard = "0.5"

[build-dependencies]
pkg-config = "^0.3"